# xn_esp32_lottie

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/xn_bsp_spd2010/: CMakeLists.txt  README.md  idf_component.yml
components/xn_bsp_spd2010/include/: bsp_i2c_driver.h  bsp_touch_spd2010.h
components/xn_bsp_spd2010/src/: bsp_exio_tca9554.c  bsp_i2c_driver.c  bsp_panel_spd2010.c  bsp_touch_spd2010.c
components/xn_lottie/: CMakeLists.txt  idf_component.yml
components/xn_lottie/include/: xn_lottie_app.h  xn_lottie_lvgl.h  xn_lottie_panel_spd2010.h
components/xn_lottie/lottie_spiffs/: emoji_cool.json  emoji_think.json
components/xn_lottie/src/: xn_lottie_app.c  xn_lottie_lvgl.c  xn_lottie_panel_spd2010.c  xn_lottie_touch_spd2010.c
components/xn_lottie_manager/: CMakeLists.txt  idf_component.yml
components/xn_lottie_manager/include/: bsp_exio_tca9554.h  bsp_touch_spd2010.h  xn_lottie_manager.h  xn_lvgl.h
components/xn_lottie_manager/lottie_spiffs/: speak.json
components/xn_lottie_manager/src/: bsp_exio_tca9554.c  bsp_i2c_driver.c  bsp_panel_spd2010.c  bsp_touch_spd2010.c  xn_lottie_app.c  xn_lottie_manager.c  xn_lottie_touch_spd2010.c  xn_lvgl.c
components/xn_lvgl_driver/: CMakeLists.txt  README.md
components/xn_lvgl_driver/src/: xn_lvgl.c
main/: CMakeLists.txt  main.c
temp/main/: main.c
